--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,10 @@ button:active {
   width: 100%;
 }
 
+.travel-info__title {
+  margin-bottom: 31px;
+}
+
 .travel-info__text {
   font-size: 14px;
   margin-bottom: 1.3em;
